dada_tests/ty_parsing/perms_with_two_paths/compiler-output.ref
Error: no paths are needed after the `my` permission
   ╭─[dada_tests/ty_parsing/perms_with_two_paths.dada:4:38]
   │
 4 │ class List1(a: Value, b: Value, v: my(a, b) Value)  #! ERROR no paths are needed after the `my` permission
   ·                                      ───┬──  
   ·                                         ╰──── here
───╯
Error: no paths are needed after the `our` permission
   ╭─[dada_tests/ty_parsing/perms_with_two_paths.dada:5:39]
   │
 5 │ class List2(a: Value, b: Value, v: our(a, b) Value)  #! ERROR no paths are needed after the `our` permission
   ·                                       ───┬──  
   ·                                          ╰──── here
───╯
